[gd_scene load_steps=9 format=3 uid="uid://q0tot0eolplg"]

[ext_resource type="Script" path="res://addons/gopilot_utils/scripts/chat_entry_sample.gd" id="1_15rh3"]
[ext_resource type="Script" path="res://addons/gopilot_utils/classes/swift_text_label.gd" id="2_knweb"]
[ext_resource type="Texture2D" uid="uid://cl3ikvuviln72" path="res://addons/gopilot_utils/textures/Script.png" id="3_5nln8"]
[ext_resource type="Texture2D" uid="uid://dtnk5offplrhs" path="res://addons/gopilot_utils/textures/Edit.png" id="3_jvqca"]
[ext_resource type="Texture2D" uid="uid://1ggivegc7tao" path="res://addons/gopilot_utils/textures/Reset.png" id="3_sxg73"]
[ext_resource type="Texture2D" uid="uid://csth1wjypb564" path="res://addons/gopilot_utils/textures/Remove.png" id="4_x864v"]
[ext_resource type="Texture2D" uid="uid://cg24v4y3hj16h" path="res://addons/gopilot_utils/textures/ActionCopy.png" id="5_rhqut"]

[sub_resource type="LabelSettings" id="LabelSettings_m8is3"]
font_size = 10
font_color = Color(0.63, 0.63, 0.63, 1)
shadow_color = Color(0, 0, 0, 0.262745)

[node name="ChatEntrySample" type="MarginContainer"]
offset_right = 249.0
offset_bottom = 37.0
script = ExtResource("1_15rh3")
script_icon = ExtResource("3_5nln8")

[node name="List" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="List"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Role" type="Label" parent="List/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "User"
label_settings = SubResource("LabelSettings_m8is3")

[node name="Buttons" type="HBoxContainer" parent="List/VBoxContainer/Role"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="RegenerateBtn" type="Button" parent="List/VBoxContainer/Role/Buttons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Regenerate this message"
mouse_filter = 1
icon = ExtResource("3_sxg73")
flat = true

[node name="EditBtn" type="Button" parent="List/VBoxContainer/Role/Buttons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Edit this message"
mouse_filter = 1
icon = ExtResource("3_jvqca")
flat = true

[node name="CopyBtn" type="Button" parent="List/VBoxContainer/Role/Buttons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Copy the content of this message"
mouse_filter = 1
icon = ExtResource("5_rhqut")
flat = true

[node name="RemoveBtn" type="Button" parent="List/VBoxContainer/Role/Buttons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove this message"
mouse_filter = 1
icon = ExtResource("4_x864v")
flat = true

[node name="Content" type="RichTextLabel" parent="List/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[EXAMPLE MESSAGE]"
fit_content = true
context_menu_enabled = true
selection_enabled = true
visible_characters = 15
visible_ratio = 0.894737
script = ExtResource("2_knweb")
fill_duration = 0.4

[node name="ProgBar" type="ProgressBar" parent="List"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1
show_percentage = false

[node name="CitationCon" type="ScrollContainer" parent="List"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 27)
layout_mode = 2

[node name="Citations" type="HBoxContainer" parent="List/CitationCon"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CitationSample" type="Button" parent="List/CitationCon"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Click to see the source"
mouse_filter = 1
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 12
text = "example_citation.gd"
icon = ExtResource("3_5nln8")
flat = true

[node name="EditPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(320, 200)

[node name="VBoxContainer" type="VBoxContainer" parent="EditPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="EditText" type="TextEdit" parent="EditPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Your edited message here..."
wrap_mode = 1

[node name="AcceptEditBtn" type="Button" parent="EditPopup/VBoxContainer"]
layout_mode = 2
text = "Accept"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="List/VBoxContainer/Role/Buttons/EditBtn" to="." method="_on_edit_btn_pressed"]
[connection signal="pressed" from="List/VBoxContainer/Role/Buttons/CopyBtn" to="." method="_on_copy_btn_pressed"]
[connection signal="pressed" from="List/VBoxContainer/Role/Buttons/RemoveBtn" to="." method="_on_remove_btn_pressed"]
[connection signal="pressed" from="EditPopup/VBoxContainer/AcceptEditBtn" to="." method="_on_accept_edit_btn_pressed"]
